--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,10 @@
-
-
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
 }
 
 .App-header {
@@ -18,7 +16,7 @@
     width: 100%;
     z-index: 1000;
     top: 0;
-    border-bottom: 1px groove gray;
+    border-bottom: 1px groove rgba(34,36,38,.15);
 }
 
 .App-header h1 {
@@ -28,47 +26,95 @@
     text-transform: uppercase;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
 
 .main-container {
-  margin: 200px 0 0 0;
+    /*margin: 200px 0 0 0;*/
 }
 
 .main-menu.menu {
     position: fixed;
 }
 
+.spacer, .menu-spacer {
+    height: 300px;
+}
+
+
 
 .custom-title {
-  writing-mode: vertical-rl !important;
-  -webkit-writing-mode: vertical-rl !important;
-  margin-top: 6px;
-  font-size: 2em;
-  font-weight: bold;
-  height: 400px!important;
+    writing-mode: vertical-rl !important;
+    -webkit-writing-mode: vertical-rl !important;
+    margin-top: 6px;
+    font-size: 2em;
+    font-weight: bold;
+    height: 400px!important;
 }
 
 .ui.container.page-segment {
     margin-bottom: 70px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-.active {
-  /*background-color: yellow !important;*/
-  background-color:  #F3F315 !important;
+ .active {
+    background-color:  #F3F315 !important;
 }
 
 a {
     color: fuchsia;
-    /*color: darkorange;*/
+}
+
+.fifteen.wide.computer.thirteen.wide.mobile.thirteen.wide.tablet.column {
+    margin: 0 auto;
+}
+
+@media only screen and (max-width: 992px) {
+    .ui.container {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+
+    .main-menu.menu {
+        position: fixed;
+        width: 100%;
+        margin: 0 auto;
+        height: 130px;
+        border-bottom: 2px solid rgba(34, 36, 38, 0.15) !important;
+    }
+
+    .main-menu.menu ul a, .App-header {
+        background-color: #fff;
+    }
+
+    .main-container {
+        padding: 56px 0 0 0;
+    }
+
+    .mobile-margins {
+        padding: 0 20px;
+    }
+
+    .full-width {
+        width: 100% !important;
+        margin: 0 auto !important;
+        background-color: #fff;
+        z-index: 1000;
+    }
+
+    .full-width ul {
+        -webkit-padding-start: 0px;
+    }
+
+    .spacer {
+        height: 300px;
+    }
+
+}
+
+@media only screen and (max-width: 992px) {
+    .menu-spacer {
+        height: 0px;
+    }
+    .spacer {
+        height: 200px;
+    }
+
 }
