--- a/client/src/App.css
+++ b/client/src/App.css
@@ -189,6 +189,10 @@ a {
         text-align: center;
         width: 60% !important;
     }
+
+    .ui.large.modal {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 660px) {
