--- a/client/src/App.css
+++ b/client/src/App.css
@@ -114,6 +114,29 @@ a {
     cursor: pointer;
 }
 
+@keyframes roateText {
+    0% { transform: skewX(45deg) }
+    /*30% { transform: skewX(35deg) }*/
+    /*60% { transform: skewX(25deg) }*/
+    /*80% { transform: skewX(15deg) }*/
+    100% { transform: skewX(0deg) }
+}
+
+@keyframes slideHeader {
+    0% { margin-left: 100vw; }
+    10% { margin-left: 90vw; }
+    20% { margin-left: 80vw; }
+    30% { margin-left: 70vw; }
+    40% { margin-left: 60vw; }
+    50% { margin-left: 50vw; }
+    60% { margin-left: 40vw; }
+    70% { margin-left: 30vw; }
+    80% { margin-left: 20vw; }
+    90% { margin-left: 10vw; }
+    100% { margin-left: 0 }
+}
+
+
 @media only screen and (max-width: 992px) {
     .background-image {
         background-image: none;
